Fixed create spot images only showing preview or all imgs fixed navigation overlap

--- a/frontend/src/components/Navigation/Modal.css
+++ b/frontend/src/components/Navigation/Modal.css
@@ -3,3 +3,7 @@
     text-decoration: none;
     list-style-type: none;
 }
+
+#modal {
+    z-index: 2;
+}
