--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -31,7 +31,7 @@ ul {
     position: sticky;
     top: 0;
     background-color: white;
-    z-index: 2;
+    z-index: 1;
 }
 
 .navlink {
